correct padding shift on filters

--- a/src/App.css
+++ b/src/App.css
@@ -270,7 +270,8 @@ a {
   display:flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
 }
 
 /* Search */
@@ -306,11 +307,6 @@ a {
   border-bottom: 3px solid rgba(255, 255, 255, 0.8);
 }
 
-@media screen and (min-width: 680px) {
-  .Filters {
-    justify-content: center;
-  }
-}
 
 /* Search Result List */
 
